--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>vc.pvp</groupId>
     <artifactId>skywars</artifactId>
     <name>SkyWars</name>
-    <version>1.0.4</version>
+    <version>1.0.5-SNAPSHOT</version>
     <description>SkyWars plugin</description>
 
     <repositories>
@@ -43,20 +43,6 @@
             <artifactId>vault</artifactId>
             <version>1.2.27</version>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.earth2me</groupId>
-            <artifactId>essentials</artifactId>
-            <version>LATEST</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/Essentials.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>com.flobi</groupId>
-            <artifactId>WhatIsIt</artifactId>
-            <version>1.3.6</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/WhatIsIt.jar</systemPath>
         </dependency>
     </dependencies>
 
