Handling enchantments properly

--- a/src/main/resources/example.yml
+++ b/src/main/resources/example.yml
@@ -13,7 +13,7 @@ details:
 - ' '
 # The items in this kit
 items:
-- 'diamondsword 1 sharpess:5'
+- 'diamondsword 1 sharpness:5'
 - 'diamondhelmet 1 protection:4'
 - 'diamondchestplate 1 protection:4'
 - 'diamondleggings 1 protection:4'
