--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>vc.pvp</groupId>
     <artifactId>skywars</artifactId>
     <name>SkyWars</name>
-    <version>1.0.4</version>
+    <version>1.0.4b</version>
     <description>SkyWars plugin</description>
 
     <repositories>
