Make sure god-mode is disabled. Adds softdepend on WorldGuard

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ description: ${project.description}
 author: Wietje
 main: ${project.groupId}.${project.artifactId}.${project.name}
 depend: [WorldEdit, Vault]
+softdepend: [WorldGuard]
 
 commands:
   skywars:
