--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <version>1.2.27</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sk89q</groupId>
+            <artifactId>worldguard</artifactId>
+            <version>LATEST</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
